Added form. Redirects to success page, does not validate email

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -8,7 +8,11 @@
   <div class="container">
 
     <h1>{{ title }}</h1>
-    <p>Welcome to {{ title }}</p>
+
+    <form method="post" action="/submit">
+      <input name="email" type="email" required>
+      <input type="submit">
+    </form>
 
   </div>
 
